# Cpp-Project-Template

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  conf.py  config.json  index.rst  requirements.txt
images/: README.md
include/: demo.hpp
src/: demo.cpp
test/: CMakeLists.txt
tests/: test-demo.hpp  test-main.cpp
